...
                        }
                    }
                }
            }
        },
        confirmButton = {
            TextButton(onClick = onDismiss, modifier = Modifier.testTag("autofill_strategy_close")) {
                Text(stringResource(R.string.autofill_domain_strategy_dialog_close))
            }
        },
        shape = RoundedCornerShape(24.dp)
    )
}
...
